fixed feed overflow bug

--- a/src/components/Feed.module.css
+++ b/src/components/Feed.module.css
@@ -1,5 +1,6 @@
 .feed {
   margin-bottom: 2rem;
+  width: 100%;
 }
 
 .header {
