--- a/src/components/RightSidebar.module.css
+++ b/src/components/RightSidebar.module.css
@@ -2,7 +2,7 @@
   flex: 0.8;
   height: fit-content;
   position: sticky;
-  top: 4rem;
+  top: 4.5rem;
   padding: 1rem;
   background-color: white;
   border-radius: 10px;
