--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -3,7 +3,7 @@
   flex: 1;
   height: calc(100vh - 4rem);
   position: sticky;
-  top: 4rem;
+  top: 4.5rem;
   overflow-y: scroll;
   padding-bottom: 2rem;
 }
