--- a/src/components/Stories.module.css
+++ b/src/components/Stories.module.css
@@ -1,5 +1,6 @@
 .stories {
-  margin: 1rem auto;
+  margin: auto;
+  margin-bottom: 1rem;
 }
 
 .header {
